// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`case.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
   <%= case sm do %>
    <% ds -> %>
      ds
    <% "text" -> %>
      43
    <% end %>

=====================================output=====================================
<%= case sm do %>
  <% ds -> %>
    ds
  <% "text" -> %>
    43
<% end %>

================================================================================
`;

exports[`case_in_html.html.eex 1`] = `
====================================options=====================================
parsers: ["eex"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div>
   <%= case sm do %>
    <% ds -> %>
      ds
    <% "text" -> %>
      <div>ds</div>
  <% end %>
</div>
<span>
   <%= case sm do %>
    <% ds -> %>
      ds
    <% "text" -> %>
      <div>ds</div>
    <% end %>

</span>

<div>
   <%= case sm do %>
    <% ds -> %>
      ds
    <% "text" -> %>
      <div>
      ds
        </div>
    <% end %>
</div>

=====================================output=====================================
<div>
  <%= case sm do %>
    <% ds -> %>
      ds
    <% "text" -> %>
      <div>ds</div>
  <% end %>
</div>
<span>
  <%= case sm do %>
    <% ds -> %>
      ds
    <% "text" -> %>
      <div>ds</div>
  <% end %>
</span>

<div>
  <%= case sm do %>
    <% ds -> %>
      ds
    <% "text" -> %>
      <div>ds</div>
  <% end %>
</div>

================================================================================
`;
